web/book/tests/documentation/snapshots/documentation__book__reference__syntax__operators__parentheses__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nderive total_distance = sum distance\n"
---
Error:
   ╭─[:2:29]
   │
 2 │ derive total_distance = sum distance
   │                             ────┬───
   │                                 ╰───── Unknown name `distance`
───╯

